# decoda

./: .gitignore  .gitmodules  LICENSE  README.md  check_build_deps.sh  demo.py  extract.json  fix_pretty_create_file.py  format_json.py  makefile  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
src/decoda/: __init__.py  exceptions.py  main.py  spec_loader.py  transport.py  well_known.py
src/decoda/sae_spec_converter/: correct_spec.py  create_j1939db_json.py  enrich_spec.py  fix_pretty_create_file.py  json_from_da.py  json_from_isobus_xlsx.py  make_extract.py  remove_bad_items.py
tests/: conftest.py  test_adhoc_spns.py  test_decoding.py  test_enrich_spec.py  test_id_decoding.py  test_industry_group.py  test_pgn_decoding.py  test_repository.py  test_spn_decoding.py  test_transport.py  test_well_known.py
